# RustConn

./: .clippy.toml  .gitattributes  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODO.md  clippy_output.txt  deny.toml  fixup.sh  flake.nix  install-desktop.sh  messages.mo  package-lock.json  release_notes.md  rustconn_audit_report.md  rustfmt.toml  test_output.txt  typos.toml
rustconn/: Cargo.toml  build.rs
rustconn-cli/: Cargo.toml
rustconn-cli/src/: cli.rs  error.rs  format.rs  main.rs  util.rs
rustconn-cli/src/commands/: add.rs  cloud_sync.rs  cluster.rs  completions.rs  connect.rs  delete.rs  duplicate.rs  dynamic_folder.rs  export_import.rs  group.rs  history.rs  list.rs  manpage.rs  mod.rs  monitor.rs  move_cmd.rs  pin.rs  recording.rs  secret.rs  sftp.rs  show.rs  smart_folder.rs  snippet.rs  stats.rs  sync.rs  tag.rs  template.rs  test.rs  update.rs  variable.rs  wol.rs
rustconn-cli/tests/: integration_tests.rs
rustconn-core/: Cargo.toml
rustconn-core/benches/: search_bench.rs
rustconn-core/rustconn/src/: sidebar.rs
rustconn-core/src/: busy.rs  cache.rs  cli_download.rs  dialog_utils.rs  display_geometry.rs  drag_drop.rs  embedded_client_error.rs  error.rs  flatpak.rs  host_check.rs  lib.rs  models.rs  password_generator.rs  progress.rs  sftp.rs  smart_folder.rs  snap.rs  ssh_tunnel.rs  terminal_themes.rs  tunnel_manager.rs
rustconn-core/src/automation/: expect.rs  key_sequence.rs  mod.rs  tasks.rs  templates.rs
rustconn-core/src/cli_download/: components.rs  extract.rs  install.rs  install_cloud.rs  install_custom.rs  install_pip.rs  mod.rs  uninstall.rs  update.rs
rustconn-core/src/cluster/: mod.rs
rustconn-core/src/config/: keybindings.rs  manager.rs  mod.rs  settings.rs
rustconn-core/src/connection/: interning.rs  lazy_loader.rs  manager.rs  mod.rs  mptcp.rs  port_check.rs  retry.rs  spa.rs  ssh_inheritance.rs  virtual_scroll.rs
rustconn-core/src/dashboard/: mod.rs
rustconn-core/src/document/: mod.rs
rustconn-core/src/export/: ansible.rs  asbru.rs  batch.rs  csv_export.rs  mobaxterm.rs  mod.rs  native.rs  remmina.rs  royalts.rs  securecrt.rs  ssh_config.rs
rustconn-core/src/ffi/: mod.rs  rdp.rs  spice.rs  vnc.rs
rustconn-core/src/import/: ansible.rs  asbru.rs  batch.rs  csv_import.rs  libvirt.rs  libvirt_daemon.rs  mobaxterm.rs  mod.rs  normalize.rs  preview.rs  rdm.rs  rdp_file.rs  remmina.rs  royalts.rs  securecrt.rs  ssh_config.rs  traits.rs  vv.rs
rustconn-core/src/models/: connection.rs  credentials.rs  custom_property.rs  group.rs  protocol.rs  snippet.rs  template.rs
rustconn-core/src/monitoring/: collector.rs  metrics.rs  mod.rs  parser.rs  settings.rs  ssh_exec.rs
rustconn-core/src/performance/: mod.rs  scroller.rs
rustconn-core/src/protocol/: cli.rs  detection.rs  freerdp.rs  icons.rs  kubernetes.rs  mod.rs  mosh.rs  rdp.rs  registry.rs  serial.rs  sftp.rs  spice.rs  ssh.rs  telnet.rs  vnc.rs  web.rs  zerotrust.rs
rustconn-core/src/rdp_client/: audio.rs  backend.rs  client.rs  clipboard.rs  config.rs  dir_watcher.rs  error.rs  event.rs  gateway.rs  graphics.rs  input.rs  keyboard_layout.rs  mod.rs  multimonitor.rs  quick_actions.rs  rdpdr.rs  reconnect.rs
rustconn-core/src/search/: cache.rs  command_palette.rs  mod.rs
rustconn-core/src/secret/: async_resolver.rs  backend.rs  bitwarden.rs  detection.rs  encrypted_file.rs  hierarchy.rs  kdbx.rs  keepassxc.rs  keyring.rs  libsecret.rs  local_crypto.rs  macos_keychain.rs  manager.rs  mod.rs  onepassword.rs  pass.rs  passbolt.rs  resolver.rs  serde_helpers.rs  status.rs  verification.rs
rustconn-core/src/session/: logger.rs  manager.rs  mod.rs  restore.rs  session.rs
rustconn-core/src/snippet/: manager.rs
rustconn-core/src/spice_client/: client.rs  config.rs  error.rs  event.rs  mod.rs
rustconn-core/src/split/: color.rs  error.rs  mod.rs  model.rs  tab_groups.rs  tree.rs  types.rs
rustconn-core/src/ssh_agent/: mod.rs
rustconn-core/src/sync/: full_export.rs  group_export.rs  group_merge.rs  inventory.rs  manager.rs  mod.rs  watcher.rs
rustconn-core/src/template/: manager.rs  mod.rs  predefined.rs
rustconn-core/src/testing/: mod.rs
rustconn-core/src/tracing/: mod.rs
rustconn-core/src/variables/: manager.rs  mod.rs
rustconn-core/src/vnc_client/: client.rs  config.rs  error.rs  event.rs  mod.rs
rustconn-core/src/wol/: mod.rs
rustconn-core/src/workspace/: manager.rs
rustconn-core/tests/: integration_tests.rs  property_tests.rs
rustconn-core/tests/fixtures/: ansible_inventory.ini  asbru.yml  mod.rs  ssh_config
rustconn-core/tests/integration/: async_patterns_tests.rs  export_import_roundtrip.rs  importer_tests.rs  mod.rs
rustconn-core/tests/properties/: async_credential_tests.rs  batch_processing_tests.rs  bulk_credential_tests.rs  cli_tests.rs  clipboard_tests.rs  cluster_tests.rs  concurrent_save.rs  config_tests.rs  connection_probe_tests.rs  connection_tests.proptest-regressions  connection_tests.rs  custom_property_tests.rs  dashboard_tests.rs  detection_tests.rs  dialog_tests.rs  display_geometry_tests.rs  document_tests.rs  drag_drop_tests.rs  embedded_client_error_tests.rs  encrypted_file_backend_tests.rs  error_tests.rs  expect_tests.rs  export_format_tests.rs  export_tests.rs  ffi_tests.rs  (+71 more)
rustconn/assets/: io.github.totoshko88.RustConn.desktop  io.github.totoshko88.RustConn.metainfo.xml  org.rustconn.RustConn.metainfo.xml  style.css
rustconn/src/: adaptive_tabs.rs  alert.rs  app.rs  async_utils.rs  audio.rs  automation.rs  cairo_buffer.rs  dashboard.rs  display.rs  embedded.rs  embedded_rdp.rs  embedded_rdp_launcher.rs  embedded_rdp_thread.rs  embedded_rdp_types.rs  embedded_rdp_ui.rs  embedded_spice.rs  embedded_toolbar_overflow.rs  embedded_trait.rs  embedded_vnc.rs  embedded_vnc_types.rs  empty_state.rs  error.rs  error_display.rs  external_session.rs  external_window.rs  floating_controls.rs  i18n.rs  i18n_markers.rs  loading.rs  macos_pty.rs  main.rs  monitoring.rs  sidebar.rs  sidebar_types.rs  sidebar_ui.rs  smart_folder_ui.rs  split_view.rs  state.rs  terminal.rs  toast.rs  (+18 more)
(+374 files in other folders)
