[package]
name = "rustconn-cli"
description = "Command-line interface for RustConn connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn-cli"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core", version = "0.19.0", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.3"
chrono = { workspace = true }
rpassword = "7.4"
secrecy = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# Minimal/default CLI is headless management: config, CRUD, list/show,
# import/export, tests, groups, tags, templates, sync metadata, stats, etc.
client-launch = []
secret-management = ["rustconn-core/system-keyring"]
desktop-integration = ["client-launch", "secret-management"]
full = ["desktop-integration"]

[dev-dependencies]
tempfile = "3.26"

[lints]
workspace = true
