[package]
name = "rustconn-core"
description = "Core library for RustConn connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
data-encoding = "2.10"
# fwknop SPA packet builder (AES-256-CBC + EVP_BytesToKey)
aes = "0.9"
cbc = { version = "0.2", features = ["block-padding"] }
md-5 = "0.11"
csv = "1"
glob = "0.3"
shell-words = "1"
quick-xml = { version = "0.41", features = ["serialize"] }
argon2 = { workspace = true }
hostname = "0.4"
slug = "0.1"
unicode-segmentation = { workspace = true }
# HTTP client and archive handling (for CLI download in Flatpak)
reqwest = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ar = "0.9"  # For extracting .deb packages (AWS SSM Plugin)
# File system notifications for RDPDR directory change monitoring
# Linux-only application, no macOS features needed
# macos_fsevent is needed for macOS dev builds (fsevent_sys dependency)
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
# Tracing for structured logging and performance profiling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Pure Rust VNC client for embedded VNC sessions
vnc-rs = { version = "0.5", optional = true }
# JPEG decoder for VNC Tight encoding (pure Rust, no C deps). Already present
# transitively; re-exports zune_core so no second direct dependency is needed.
zune-jpeg = { version = "0.5.15", optional = true }
# Pure Rust RDP client for embedded RDP sessions using IronRDP (crates.io)
# native-tls instead of rustls to match rdw approach
# Features: cliprdr (clipboard), rdpdr (shared folders + printer), dvc (dynamic channels),
# displaycontrol (dynamic resolution), rdpsnd (audio), echo (RTT measurement)
#
# ON UPGRADE (0.17 → next) — re-check whether these are now usable upstream:
#   * RAIL / RemoteApp (MS-RDPERP): only opaque CapabilitySet::Rail buffer exists,
#     no channel/handshake → RemoteApp still forces external xfreerdp3 fallback.
#   * GFX pipeline + H.264/AVC444 (MS-RDPEGFX): ✅ DONE — integrated via
#     ironrdp-egfx 0.3 + gfx-h264 feature (AVC420 decode, OpenH264 dlopen).
#     Phase 2 (AVC444 dual-stream) pending upstream verification.
#   * Audio input / microphone (MS-RDPEAI): no channel → microphone_enabled field
#     in RdpClientConfig is still dead (unrelated to GFX work; needs upstream support).
#   * Drive change notifications: needs ClientDriveNotifyChangeDirectoryResponse PDU
#     (check if ironrdp-rdpdr 0.7 added it).
ironrdp = { version = "0.17", features = [
    "connector", "session", "graphics", "pdu", "core", "svc",
    "cliprdr",        # Clipboard redirection
    "rdpdr",          # Device/drive redirection (shared folders)
    "dvc",            # Dynamic Virtual Channels
    "displaycontrol", # Dynamic resolution changes (MS-RDPEDISP)
    "rdpsnd",         # Audio redirection
    "echo",           # Echo DVC for RTT measurement (MS-RDPEECO)
], optional = true }
ironrdp-input = { version = "0.7", optional = true }
ironrdp-tokio = { version = "0.10", features = ["reqwest"], optional = true }
ironrdp-tls = { version = "0.2", features = ["native-tls"], optional = true }
# GFX pipeline (MS-RDPEGFX) with H.264/AVC decoding via OpenH264 dlopen
ironrdp-egfx = { version = "0.3", features = ["openh264-libloading"], optional = true }
# RD Gateway (MS-TSGU) — HTTPS tunneling for RDP through corporate gateways
ironrdp-mstsgu = { version = "0.0.1", features = ["native-tls"], optional = true }
# Pin native-tls to avoid Tlsv13 compile bug in 0.2.17
native-tls = { workspace = true, optional = true }
nix = { version = "0.31.2", features = ["fs", "signal", "process"] }
# MPTCP (Multipath TCP) socket creation — safe API, no unsafe needed
socket2 = { version = "0.5", features = ["all"] }
fs2 = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.3", optional = true }

# Secret Service (keyring) client. Gated to non-macOS so oo7 NEVER compiles on
# macOS (which uses security-framework above). Used by the LibSecret/keyring
# path in Part C.
[target.'cfg(not(target_os = "macos"))'.dependencies]
oo7 = { workspace = true, optional = true }

# Note: ironrdp-rdpdr-native 0.7 requires ironrdp-rdpdr 0.7.x which matches ironrdp 0.17

[features]
default = []
# Domain-only builds should keep this crate usable without desktop/session
# integration dependencies. Enable the following features only in crates that
# embed clients or integrate with the host desktop keyring.
system-keyring = ["dep:oo7", "dep:security-framework"]
vnc-embedded = ["dep:vnc-rs", "dep:zune-jpeg"]
# web-embedded enables the embedded WebKitGTK 6.0 WebView for in-tab web browsing
web-embedded = []
# rdp-embedded feature enables the RdpClient struct with IronRDP
rdp-embedded = [
    "dep:ironrdp",
    "dep:ironrdp-input",
    "dep:ironrdp-tokio",
    "dep:ironrdp-tls",
    "dep:native-tls",
]
# gfx-h264 enables EGFX pipeline with H.264/AVC decoding (requires rdp-embedded)
gfx-h264 = ["dep:ironrdp-egfx", "rdp-embedded"]
# rd-gateway enables native RD Gateway (MS-TSGU) tunneling without external client
rd-gateway = ["dep:ironrdp-mstsgu", "rdp-embedded"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[lints]
workspace = true
