[package]
name = "rustconn"
description = "Modern connection manager for Linux with GTK4 GUI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core" }
tokio = { workspace = true }
gtk4 = { workspace = true, features = ["v4_14"] }
vte4 = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
chrono = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
open = "5"
dirs = "5"
# Tray icon support via StatusNotifierItem D-Bus protocol
# Requires libdbus-1-dev on Ubuntu/Debian or dbus-devel on Fedora
ksni = { version = "0.2", optional = true }
# SVG rendering for tray icon (renders SVG to ARGB32 pixmap)
resvg = { version = "0.44", optional = true }

[features]
default = ["tray", "vnc-embedded", "rdp-embedded"]
tray = ["dep:ksni", "dep:resvg"]
vnc-embedded = ["rustconn-core/vnc-embedded"]
rdp-embedded = ["rustconn-core/rdp-embedded"]
spice-embedded = ["rustconn-core/spice-embedded"]

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Anton Isaiev <totoshko88@gmail.com>"
copyright = "2025, Anton Isaiev"
license-file = ["../LICENSE", "0"]
extended-description = """Modern connection manager for Linux desktops.
Supports SSH, RDP, VNC, and SPICE remote connections with GTK4 GUI.
Features include connection groups, import/export, credential management,
session logging, and Wake-on-LAN support."""
section = "net"
priority = "optional"
depends = "$auto, openssh-client"
recommends = "freerdp2-x11, tigervnc-viewer, virt-viewer"
assets = [
    ["target/release/rustconn", "usr/bin/", "755"],
    ["target/release/rustconn-cli", "usr/bin/", "755"],
    ["assets/org.rustconn.RustConn.desktop", "usr/share/applications/", "644"],
    ["assets/org.rustconn.RustConn.metainfo.xml", "usr/share/metainfo/", "644"],
    ["assets/icons/hicolor/scalable/apps/org.rustconn.RustConn.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/screenshots/main-window.png", "usr/share/metainfo/screenshots/", "644"],
]
